# X_UI_API

./: .gitignore  config.py  json_loads.py  logger_settings.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/configuration/: server.py
app/configuration/routes/: __init__.py
app/internal/routes/: admin.py
utils/module_xui/: xui_manage.py
