[tool.poetry]
name = "api-vless"
version = "0.1.0"
description = ""
authors = ["LostUnion <nsk.19980513@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
urllib3 = "^2.3.0"
logging = "^0.4.9.6"
beautifulsoup4 = "^4.13.3"
aiohttp = "^3.11.12"
qrcode = "^8.0"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
